--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ env_logger = "0.11.8"
 pollster = "0.4.0"
 thiserror = "2.0.16"
 tracing = "0.1.41"
+uuid = {version = "1.18.0", features = ["v4"]}
 wgpu = "26.0.1"
 winit = "0.30.12"
